Fix tests to feature/BJS2-2186