@@ -4,18 +4,25 @@ import jakarta.persistence.EntityNotFoundException;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.*;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
+import school.faang.user_service.dto.event.SearchAppearanceEventDto;
 import school.faang.user_service.dto.user.UserDto;
+import school.faang.user_service.dto.user.UserFilterDto;
 import school.faang.user_service.entity.User;
 import school.faang.user_service.entity.event.Event;
 import school.faang.user_service.entity.goal.Goal;
+import school.faang.user_service.filter.Filter;
 import school.faang.user_service.mapper.UserMapper;
+import school.faang.user_service.publisher.SearchAppearanceEventPublisher;
 import school.faang.user_service.repository.UserRepository;
 import school.faang.user_service.repository.event.EventRepository;
 import school.faang.user_service.repository.goal.GoalRepository;
 import school.faang.user_service.repository.mentorship.MentorshipRepository;
 
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -29,21 +36,48 @@ import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 public class UserServiceTest {
-
     @Mock
     private UserRepository userRepository;
     @Mock
+    private GoalRepository goalRepository;
+    @Mock
     private EventRepository eventRepository;
     @Mock
-    private MentorshipRepository mentorshipRepository;
-    @Mock
-    private GoalRepository goalRepository;
-
-    @Mock
     private UserMapper userMapper;
-
+    @Mock
+    private List<Filter<UserFilterDto, User>> filters;
+    @Mock
+    private SearchAppearanceEventPublisher publisher;
     @InjectMocks
     private UserService userService;
+
+    @Test
+    public void testGetUsersWhenFilterApplicable() {
+        UserFilterDto filter = new UserFilterDto();
+        filter.setNamePattern("Kate");
+
+        User user = new User();
+        user.setId(1L);
+        user.setUsername("Kate");
+
+        UserDto userDto = new UserDto();
+        userDto.setId(1L);
+        userDto.setUsername("Kate");
+
+        SearchAppearanceEventDto searchAppearanceEventDto = new SearchAppearanceEventDto(
+                1L,
+                1L,
+                LocalDateTime.now()
+        );
+
+        when(userRepository.findAll()).thenReturn(Collections.singletonList(user));
+        when(userMapper.toDto(user)).thenReturn(userDto);
+
+        List<UserDto> result = userService.getUsers(filter, 1L);
+
+        assertEquals(1, result.size());
+        assertEquals(userDto, result.get(0));
+    }
 
     @Test
     public void testGetUserByIdFailed() {
@@ -123,23 +157,21 @@ public class UserServiceTest {
     }
 
     @Test
-    public void testGetAllUser() {
-        List<User> mockUsers = List.of(new User(), new User(), new User());
-        when(userRepository.findAll()).thenReturn(mockUsers);
-        List<UserDto> mockUserDtos = List.of(new UserDto(), new UserDto(), new UserDto());
-        when(userMapper.toDtoList(mockUsers)).thenReturn(mockUserDtos);
+    public void testGetUsersWhenFilterApplicableAndUserListEmpty() {
+        UserFilterDto filter = new UserFilterDto();
+        when(userRepository.findAll()).thenReturn(Collections.emptyList());
 
-        List<UserDto> result = userService.getUsers();
+        List<UserDto> result = userService.getUsers(filter, 1L);
 
-        assertEquals(mockUserDtos.size(), result.size());
+        assertTrue(result.isEmpty());
     }
 
     @Test
-    public void testGetAllUserWithEmptyList() {
-        List<User> emptyList = Collections.emptyList();
-        when(userRepository.findAll()).thenReturn(emptyList);
+    public void testGetUsersWhenFilterNotApplicable() {
+        UserFilterDto filter = new UserFilterDto();
+        when(userRepository.findAll()).thenReturn(Collections.emptyList());
 
-        List<UserDto> result = userService.getUsers();
+        List<UserDto> result = userService.getUsers(filter, 1L);
 
         assertTrue(result.isEmpty());
     }
